
- stationaryGroundwaterFoam

  - new tutorial relative to the new solver

- porousScalarTransportFoam

  - new tutorial case to validate the new BC fixedFlux

### Libraries

- toolsGIS

  - new library containing classes for GIS manipulation
  - first class is MNT file used to read xyz file and performed
    bilinear interpolation.

- porousBoundaryConditions

  - new boundary condition "fixedFlux" to impose a user-defined fixed flux
  for a given specie C. Dispersion is set to 0 along this boundary to respect
  mass conservation and ensure that fixed flux is correctly computed.

### Utilities

- setFieldsFromMNT

  - new utility to initialize fields using MNTfile class with bilinear
  interpolation

- setFieldsFromXY

  - new option to add offset to interpolated value (also in setFieldsFromMNT)

************************
*** V1809
*** New solvers : groundwater2DFoam + groundwaterTransportFoam
************************

### Solvers

- groundwaterFoam

  - wellbore added to handle injection/extraction
  
- impesFoam/anisoImpesFoam/groundwaterFoam

  - wellboreProperies is a subDict of transportProperties
  - Winj/Wext (wellbore positions) are moved from 0/ to constant/

- porousScalarTransportFoam

  - retard coefficient "R" added
  - new time-stepping (using dCmax absolute and relative)

- groundwater2DFoam

  - new solver for 2D groundwater flow modeling (Dupuit's hypothesis)

- groundwaterTransportFoam

  - new solver coupling groundwaterFoam and porousScalarTransportFoam
  the C component is transported in fluid phase with variable saturation

### Libraries

- dispersionModels

  - alphaL/alphaT can be heterogeneous (volScalarField) in the

### Tutorials

- impesFoam/anisoImpesFoam

  - updated (wellboreProperties removed)

- groundwater2DFoam

  - 2 test case for solver validation

### Utilities

- setFieldsFromXY (replace setPermeabilityFieldFromXY)

  - can be used to initialize any volScalarFields from a rectangularMatrix