@@ -1,10 +1,12 @@
 EXE_INC = \
     -I$(LIB_SRC)/finiteVolume/lnInclude \
     -I$(LIB_SRC)/meshTools/lnInclude \
-    -I../../libraries/porousModels/lnInclude
+    -I../../libraries/porousModels/lnInclude \
+    -I../../libraries/toolsGIS/lnInclude
 
 EXE_LIBS = \
     -lfiniteVolume \
     -L$(FOAM_USER_LIBBIN) \
     -lporousModels \
-    -lporousBoundaryConditions
+    -lporousBoundaryConditions \
+    -ltoolsGIS
